# Phoenix

./: CMakeLists.txt  Phoenix.ioc  README.md  run.sh
STM32F4/Core/Inc/: stm32f4xx_hal_conf.h
STM32F4/Core/Src/: stm32f4xx_hal_msp.c
include/: communication.h  led.h  main.h
src/: communication.c  led.c  main.c
tests/protocol/: CMakeLists.txt  protocol_test.cpp
